--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,127 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.app-header {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  text-align: center;
+  background-color: #131A28;
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading-text {
+  color: white;
+  font-size: 42px;
+  font-weight: bolder;
+  text-align: center;
+  margin: 50px;
+}
+
+.square {
+  min-width: 100px;
+  min-height: 100px;
+  font-size: 64px;
+  text-align: center;
+  color: #1CDBF5;
+  font-weight: bolder;
+  padding: 30px;
+}
+
+.fc-aqua {
+  color: #1CDBF5;
+}
+
+.fc-white {
+  color: white;
+}
+
+.fw-600 {
+  font-weight: bolder;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.jc-center {
+  justify-content: center;
+}
+
+.b-bottom-right {
+  border-right: 15px solid #1CDBF5;
+  border-bottom: 15px solid #1CDBF5;
+}
+
+.b-bottom {
+  border-bottom: 15px solid #1CDBF5;
+}
+
+.b-right {
+  border-right: 15px solid #1CDBF5;
+}
+
+.clear-button {
+  width: max-content;
+  margin: 40px auto 10px auto;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .heading-text {
+      color: white;
+      font-size: 30px;
+      font-weight: bolder;
+      text-align: center;
+      margin: 60px 10px;
+  }
+
+  .square {
+      min-width: 80px;
+      min-height: 80px;
+      font-size: 32px;
+      font-weight: bolder;
+      padding: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+
+  .b-bottom-right {
+      border-right: 10px solid #1CDBF5;
+      border-bottom: 10px solid #1CDBF5;
+  }
+
+  .b-bottom {
+      border-bottom: 10px solid #1CDBF5;
+  }
+
+  .b-right {
+      border-right: 10px solid #1CDBF5;
+  }
+
+  .clear-button {
+      width: max-content;
+      margin: 40px auto 10px auto;
+  }
+}
+.player-turn {
+  font-size: 1.5rem; 
+  font-weight: bold; 
+  color: #333; 
+  margin: 1rem 0;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.8); 
+  padding: 10px; 
+  border-radius: 8px;
+  border: 2px solid #007bff; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
